corrected spacings

--- a/landing-pages/site/assets/scss/_docs.scss
+++ b/landing-pages/site/assets/scss/_docs.scss
@@ -4459,6 +4459,7 @@
 
   h1 {
     margin-top: 0;
+    margin-bottom: 30px;
     font-weight: 500;
     font-family: "Rubik", sans-serif;
     color: #51504f;
@@ -4466,15 +4467,16 @@
 
   h1, h2, .rst-content .toctree-wrapper p.caption, h3, h4, h5, h6, legend {
     margin-top: 0;
+    margin-bottom: 20px;
     font-weight: 500;
     font-family: "Roboto", sans-serif
   }
 
   p {
-    line-height: 24px;
+    line-height: 1.63;
     margin: 0;
     font-size: 16px;
-    margin-bottom: 24px
+    margin-bottom: 30px;
   }
 
   h1 {
